Refactor code formatting and optimize imports
Standardized code style and imports across the project:
- Replaced wildcard imports with specific imports in Array, DateTime, and Stream exercises.
- Applied consistent indentation and spacing.
- Added braces to single-line control structures.
- Reorganized `Person` class structure.
- Fixed minor spacing issues in HackerRank utilities.