@@ -1,12 +1,22 @@
 package com.aykacltd.stream;
 
+import com.aykacltd.stream.Person.Gender;
 import com.aykacltd.stream.Profession.EmploymentStatus;
 import com.aykacltd.stream.Skill.ProficiencyLevel;
-import com.aykacltd.stream.Person.Gender;
-
-import java.util.*;
-import java.util.function.Function;
-import java.util.stream.*;
+import java.util.Comparator;
+import java.util.DoubleSummaryStatistics;
+import java.util.IntSummaryStatistics;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.OptionalDouble;
+import java.util.OptionalInt;
+import java.util.TreeMap;
+import java.util.stream.Collectors;
+import java.util.stream.DoubleStream;
+import java.util.stream.IntStream;
+import java.util.stream.LongStream;
 
 /**
  * <h1>Java Stream API — Statistical Analysis &amp; Math Operations</h1>
@@ -42,7 +52,9 @@ import java.util.stream.*;
  */
 public class StreamMathExercises {
 
-    /** Shared dataset used by every exercise. */
+    /**
+     * Shared dataset used by every exercise.
+     */
     private static final List<Person> PEOPLE = SampleData.getPeople();
 
     /**
@@ -50,8 +62,8 @@ public class StreamMathExercises {
      * Many exercises filter on this so we pre-compute it once.
      */
     private static final List<Person> EARNERS = PEOPLE.stream()
-            .filter(p -> p.getProfession() != null && p.getProfession().salary() > 0)
-            .toList();
+        .filter(p -> p.getProfession() != null && p.getProfession().salary() > 0)
+        .toList();
 
     public static void main(String[] args) {
         System.out.println("═══════════════════════════════════════════════════════════");
@@ -207,8 +219,8 @@ public class StreamMathExercises {
      */
     static void doubleStreamFromMapToDouble() {
         double total = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .sum();
+            .mapToDouble(p -> p.getProfession().salary())
+            .sum();
 
         printExercise("1.2 mapToDouble → sum()", "£%,.2f".formatted(total));
     }
@@ -222,8 +234,8 @@ public class StreamMathExercises {
      */
     static void longStreamFromMapToLong() {
         long totalExperience = EARNERS.stream()
-                .mapToLong(p -> p.getProfession().yearsExperience())
-                .sum();
+            .mapToLong(p -> p.getProfession().yearsExperience())
+            .sum();
 
         printExercise("1.3 mapToLong → total experience years", totalExperience);
     }
@@ -240,14 +252,14 @@ public class StreamMathExercises {
     static void primitiveStreamBoxingUnboxing() {
         // Primitive → Boxed: needed for Collectors
         List<Double> salaryList = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .boxed()
-                .toList();
+            .mapToDouble(p -> p.getProfession().salary())
+            .boxed()
+            .toList();
 
         // Boxed → Primitive: use mapToDouble on Stream<Double>
         double sum = salaryList.stream()
-                .mapToDouble(Double::doubleValue)
-                .sum();
+            .mapToDouble(Double::doubleValue)
+            .sum();
 
         printExercise("1.4 boxed() list size", salaryList.size());
         printExercise("    unboxed sum", "£%,.2f".formatted(sum));
@@ -266,8 +278,8 @@ public class StreamMathExercises {
      */
     static void sumWithMapToDouble() {
         double total = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .sum();
+            .mapToDouble(p -> p.getProfession().salary())
+            .sum();
 
         printExercise("2.1 Sum via mapToDouble().sum()", "£%,.2f".formatted(total));
     }
@@ -282,8 +294,8 @@ public class StreamMathExercises {
      */
     static void sumWithReduce() {
         double total = EARNERS.stream()
-                .map(p -> p.getProfession().salary())
-                .reduce(0.0, Double::sum);
+            .map(p -> p.getProfession().salary())
+            .reduce(0.0, Double::sum);
 
         printExercise("2.2 Sum via reduce(identity, accumulator)", "£%,.2f".formatted(total));
     }
@@ -298,8 +310,8 @@ public class StreamMathExercises {
      */
     static void sumWithCollector() {
         double total = EARNERS.stream()
-                .collect(Collectors.summingDouble(
-                        p -> p.getProfession().salary()));
+            .collect(Collectors.summingDouble(
+                p -> p.getProfession().salary()));
 
         printExercise("2.3 Sum via Collectors.summingDouble()", "£%,.2f".formatted(total));
     }
@@ -315,11 +327,11 @@ public class StreamMathExercises {
      */
     static void averageWithPrimitiveStream() {
         OptionalDouble avg = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .average();
+            .mapToDouble(p -> p.getProfession().salary())
+            .average();
 
         printExercise("2.4 Average via mapToDouble().average()",
-                avg.isPresent() ? "£%,.2f".formatted(avg.getAsDouble()) : "N/A");
+            avg.isPresent() ? "£%,.2f".formatted(avg.getAsDouble()) : "N/A");
     }
 
     /**
@@ -331,8 +343,8 @@ public class StreamMathExercises {
      */
     static void averageWithCollector() {
         double avg = EARNERS.stream()
-                .collect(Collectors.averagingDouble(
-                        p -> p.getProfession().salary()));
+            .collect(Collectors.averagingDouble(
+                p -> p.getProfession().salary()));
 
         printExercise("2.5 Average via Collectors.averagingDouble()", "£%,.2f".formatted(avg));
     }
@@ -346,11 +358,11 @@ public class StreamMathExercises {
      */
     static void minSalary() {
         OptionalDouble min = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .min();
+            .mapToDouble(p -> p.getProfession().salary())
+            .min();
 
         printExercise("2.6 Min salary",
-                min.isPresent() ? "£%,.2f".formatted(min.getAsDouble()) : "N/A");
+            min.isPresent() ? "£%,.2f".formatted(min.getAsDouble()) : "N/A");
     }
 
     /**
@@ -361,11 +373,11 @@ public class StreamMathExercises {
      */
     static void maxSalary() {
         OptionalDouble max = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .max();
+            .mapToDouble(p -> p.getProfession().salary())
+            .max();
 
         printExercise("2.7 Max salary",
-                max.isPresent() ? "£%,.2f".formatted(max.getAsDouble()) : "N/A");
+            max.isPresent() ? "£%,.2f".formatted(max.getAsDouble()) : "N/A");
     }
 
     /**
@@ -379,9 +391,9 @@ public class StreamMathExercises {
      */
     static void minAndMaxExperience() {
         IntStream expStream1 = EARNERS.stream()
-                .mapToInt(p -> p.getProfession().yearsExperience());
+            .mapToInt(p -> p.getProfession().yearsExperience());
         IntStream expStream2 = EARNERS.stream()
-                .mapToInt(p -> p.getProfession().yearsExperience());
+            .mapToInt(p -> p.getProfession().yearsExperience());
 
         OptionalInt minExp = expStream1.min();
         OptionalInt maxExp = expStream2.max();
@@ -400,7 +412,7 @@ public class StreamMathExercises {
     static void countWithVariousMethods() {
         long countStream = EARNERS.stream().count();
         long countCollector = EARNERS.stream()
-                .collect(Collectors.counting());
+            .collect(Collectors.counting());
         int countList = EARNERS.size();
 
         printExercise("2.9 Count — stream.count()", countStream);
@@ -424,11 +436,11 @@ public class StreamMathExercises {
      */
     static void salarySummaryStatistics() {
         DoubleSummaryStatistics stats = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .summaryStatistics();
+            .mapToDouble(p -> p.getProfession().salary())
+            .summaryStatistics();
 
         printExercise("3.1 Salary DoubleSummaryStatistics",
-                formatStats(stats, "£"));
+            formatStats(stats, "£"));
     }
 
     /**
@@ -440,14 +452,14 @@ public class StreamMathExercises {
      */
     static void experienceSummaryStatistics() {
         IntSummaryStatistics stats = EARNERS.stream()
-                .mapToInt(p -> p.getProfession().yearsExperience())
-                .summaryStatistics();
+            .mapToInt(p -> p.getProfession().yearsExperience())
+            .summaryStatistics();
 
         printExercise("3.2 Experience IntSummaryStatistics",
-                "count=%d, min=%d, max=%d, avg=%.1f, sum=%d"
-                        .formatted(stats.getCount(), stats.getMin(),
-                                stats.getMax(), stats.getAverage(),
-                                (long) stats.getSum()));
+            "count=%d, min=%d, max=%d, avg=%.1f, sum=%d"
+                .formatted(stats.getCount(), stats.getMin(),
+                    stats.getMax(), stats.getAverage(),
+                    (long) stats.getSum()));
     }
 
     /**
@@ -458,13 +470,13 @@ public class StreamMathExercises {
      */
     static void ageSummaryStatistics() {
         IntSummaryStatistics stats = PEOPLE.stream()
-                .mapToInt(Person::getAge)
-                .summaryStatistics();
+            .mapToInt(Person::getAge)
+            .summaryStatistics();
 
         printExercise("3.3 Age IntSummaryStatistics",
-                "count=%d, min=%d, max=%d, avg=%.1f"
-                        .formatted(stats.getCount(), stats.getMin(),
-                                stats.getMax(), stats.getAverage()));
+            "count=%d, min=%d, max=%d, avg=%.1f"
+                .formatted(stats.getCount(), stats.getMin(),
+                    stats.getMax(), stats.getAverage()));
     }
 
     /**
@@ -475,13 +487,13 @@ public class StreamMathExercises {
      */
     static void skillCountSummaryStatistics() {
         IntSummaryStatistics stats = PEOPLE.stream()
-                .mapToInt(p -> p.getSkills().size())
-                .summaryStatistics();
+            .mapToInt(p -> p.getSkills().size())
+            .summaryStatistics();
 
         printExercise("3.4 Skills-per-person statistics",
-                "count=%d, min=%d, max=%d, avg=%.1f"
-                        .formatted(stats.getCount(), stats.getMin(),
-                                stats.getMax(), stats.getAverage()));
+            "count=%d, min=%d, max=%d, avg=%.1f"
+                .formatted(stats.getCount(), stats.getMin(),
+                    stats.getMax(), stats.getAverage()));
     }
 
     /**
@@ -494,14 +506,14 @@ public class StreamMathExercises {
      */
     static void compareSummaryStatisticsPerGender() {
         Map<Gender, DoubleSummaryStatistics> statsByGender = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        Person::getGender,
-                        Collectors.summarizingDouble(
-                                p -> p.getProfession().salary())));
+            .collect(Collectors.groupingBy(
+                Person::getGender,
+                Collectors.summarizingDouble(
+                    p -> p.getProfession().salary())));
 
         System.out.println("  ► 3.5 Salary statistics per gender:");
         statsByGender.forEach((gender, stats) ->
-                System.out.println("    %s: %s".formatted(gender, formatStats(stats, "£"))));
+            System.out.println("    %s: %s".formatted(gender, formatStats(stats, "£"))));
     }
 
     // ═══════════════════════════════════════════════════════════════════
@@ -524,12 +536,12 @@ public class StreamMathExercises {
      */
     static void sumSalariesWithThreeArgReduce() {
         double total = EARNERS.stream()
-                .reduce(
-                        0.0,                                                // identity
-                        (partialSum, person) -> partialSum +                // accumulator
-                                person.getProfession().salary(),
-                        Double::sum                                         // combiner
-                );
+            .reduce(
+                0.0,                                                // identity
+                (partialSum, person) -> partialSum +                // accumulator
+                    person.getProfession().salary(),
+                Double::sum                                         // combiner
+            );
 
         printExercise("4.1 Three-arg reduce (sum)", "£%,.2f".formatted(total));
     }
@@ -548,9 +560,9 @@ public class StreamMathExercises {
     static void productOfExperienceYears() {
         // Using only employed people with experience > 0
         long product = EARNERS.stream()
-                .map(p -> (long) p.getProfession().yearsExperience())
-                .filter(exp -> exp > 0)
-                .reduce(1L, (a, b) -> a * b);
+            .map(p -> (long) p.getProfession().yearsExperience())
+            .filter(exp -> exp > 0)
+            .reduce(1L, (a, b) -> a * b);
 
         printExercise("4.2 Product of experience years (reduce with *)", product);
     }
@@ -565,11 +577,11 @@ public class StreamMathExercises {
      */
     static void findHighestSalaryWithReduce() {
         Optional<Double> highest = EARNERS.stream()
-                .map(p -> p.getProfession().salary())
-                .reduce(Double::max);
+            .map(p -> p.getProfession().salary())
+            .reduce(Double::max);
 
         printExercise("4.3 Max salary via reduce(Double::max)",
-                highest.map("£%,.2f"::formatted).orElse("N/A"));
+            highest.map("£%,.2f"::formatted).orElse("N/A"));
     }
 
     /**
@@ -583,12 +595,12 @@ public class StreamMathExercises {
      */
     static void concatenateSalariesAsString() {
         String salaryChain = EARNERS.stream()
-                .reduce(
-                        "",
-                        (str, p) -> str + (str.isEmpty() ? "" : " + ") +
-                                "£%,.0f".formatted(p.getProfession().salary()),
-                        (s1, s2) -> s1 + (s1.isEmpty() ? "" : " + ") + s2
-                );
+            .reduce(
+                "",
+                (str, p) -> str + (str.isEmpty() ? "" : " + ") +
+                    "£%,.0f".formatted(p.getProfession().salary()),
+                (s1, s2) -> s1 + (s1.isEmpty() ? "" : " + ") + s2
+            );
 
         printExercise("4.4 Salaries concatenated via reduce", salaryChain);
     }
@@ -603,22 +615,30 @@ public class StreamMathExercises {
      */
     static void reduceToCustomAccumulator() {
         record SumCount(double sum, long count) {
-            double average() { return count == 0 ? 0 : sum / count; }
-            SumCount add(double value) { return new SumCount(sum + value, count + 1); }
-            SumCount merge(SumCount other) { return new SumCount(sum + other.sum, count + other.count); }
+            double average() {
+                return count == 0 ? 0 : sum / count;
+            }
+
+            SumCount add(double value) {
+                return new SumCount(sum + value, count + 1);
+            }
+
+            SumCount merge(SumCount other) {
+                return new SumCount(sum + other.sum, count + other.count);
+            }
         }
 
         SumCount result = EARNERS.stream()
-                .map(p -> p.getProfession().salary())
-                .reduce(
-                        new SumCount(0, 0),
-                        (acc, salary) -> acc.add(salary),
-                        SumCount::merge
-                );
+            .map(p -> p.getProfession().salary())
+            .reduce(
+                new SumCount(0, 0),
+                (acc, salary) -> acc.add(salary),
+                SumCount::merge
+            );
 
         printExercise("4.5 Custom accumulator reduce",
-                "sum=£%,.0f, count=%d, avg=£%,.0f"
-                        .formatted(result.sum(), result.count(), result.average()));
+            "sum=£%,.0f, count=%d, avg=£%,.0f"
+                .formatted(result.sum(), result.count(), result.average()));
     }
 
     // ═══════════════════════════════════════════════════════════════════
@@ -635,10 +655,10 @@ public class StreamMathExercises {
      */
     static void sumSalaryByCompany() {
         Map<String, Double> result = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().company(),
-                        Collectors.summingDouble(
-                                p -> p.getProfession().salary())));
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().company(),
+                Collectors.summingDouble(
+                    p -> p.getProfession().salary())));
 
         printExercise("5.1 SUM salary by company", formatMoney(result));
     }
@@ -652,10 +672,10 @@ public class StreamMathExercises {
      */
     static void averageSalaryByDepartment() {
         Map<String, Double> result = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().department(),
-                        Collectors.averagingDouble(
-                                p -> p.getProfession().salary())));
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().department(),
+                Collectors.averagingDouble(
+                    p -> p.getProfession().salary())));
 
         printExercise("5.2 AVG salary by department", formatMoney(result));
     }
@@ -671,13 +691,13 @@ public class StreamMathExercises {
      */
     static void maxSalaryByCountry() {
         Map<String, Double> result = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        Person::getHomeCountry,
-                        Collectors.collectingAndThen(
-                                Collectors.maxBy(Comparator.comparingDouble(
-                                        p -> p.getProfession().salary())),
-                                opt -> opt.map(p -> p.getProfession().salary()).orElse(0.0)
-                        )));
+            .collect(Collectors.groupingBy(
+                Person::getHomeCountry,
+                Collectors.collectingAndThen(
+                    Collectors.maxBy(Comparator.comparingDouble(
+                        p -> p.getProfession().salary())),
+                    opt -> opt.map(p -> p.getProfession().salary()).orElse(0.0)
+                )));
 
         printExercise("5.3 MAX salary by country", formatMoney(result));
     }
@@ -692,11 +712,11 @@ public class StreamMathExercises {
      */
     static void minExperienceByCompany() {
         Map<String, Optional<Integer>> result = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().company(),
-                        Collectors.mapping(
-                                p -> p.getProfession().yearsExperience(),
-                                Collectors.minBy(Integer::compareTo))));
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().company(),
+                Collectors.mapping(
+                    p -> p.getProfession().yearsExperience(),
+                    Collectors.minBy(Integer::compareTo))));
 
         Map<String, String> formatted = new LinkedHashMap<>();
         result.forEach((k, v) -> formatted.put(k, v.map(y -> y + " years").orElse("N/A")));
@@ -712,7 +732,7 @@ public class StreamMathExercises {
      */
     static void countByGender() {
         Map<Gender, Long> result = PEOPLE.stream()
-                .collect(Collectors.groupingBy(Person::getGender, Collectors.counting()));
+            .collect(Collectors.groupingBy(Person::getGender, Collectors.counting()));
 
         printExercise("5.5 COUNT by gender", result);
     }
@@ -725,11 +745,11 @@ public class StreamMathExercises {
      */
     static void sumSalaryByEmploymentStatus() {
         Map<EmploymentStatus, Double> result = PEOPLE.stream()
-                .filter(p -> p.getProfession() != null)
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().status(),
-                        Collectors.summingDouble(
-                                p -> p.getProfession().salary())));
+            .filter(p -> p.getProfession() != null)
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().status(),
+                Collectors.summingDouble(
+                    p -> p.getProfession().salary())));
 
         printExercise("5.6 SUM salary by employment status", formatMoney(result));
     }
@@ -742,9 +762,9 @@ public class StreamMathExercises {
      */
     static void averageAgeByCompany() {
         Map<String, Double> result = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().company(),
-                        Collectors.averagingInt(Person::getAge)));
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().company(),
+                Collectors.averagingInt(Person::getAge)));
 
         Map<String, String> formatted = new LinkedHashMap<>();
         result.forEach((k, v) -> formatted.put(k, "%.1f years".formatted(v)));
@@ -762,9 +782,9 @@ public class StreamMathExercises {
      */
     static void totalSkillCountByDepartment() {
         Map<String, Integer> result = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().department(),
-                        Collectors.summingInt(p -> p.getSkills().size())));
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().department(),
+                Collectors.summingInt(p -> p.getSkills().size())));
 
         printExercise("5.8 Total skill slots by department", result);
     }
@@ -783,18 +803,18 @@ public class StreamMathExercises {
      */
     static void avgSalaryByCompanyAndGender() {
         Map<String, Map<Gender, Double>> result = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().company(),
-                        Collectors.groupingBy(
-                                Person::getGender,
-                                Collectors.averagingDouble(
-                                        p -> p.getProfession().salary()))));
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().company(),
+                Collectors.groupingBy(
+                    Person::getGender,
+                    Collectors.averagingDouble(
+                        p -> p.getProfession().salary()))));
 
         System.out.println("  ► 6.1 AVG salary by company → gender:");
         result.forEach((company, genderMap) -> {
             System.out.println("    " + company + ":");
             genderMap.forEach((gender, avg) ->
-                    System.out.println("      %s: £%,.0f".formatted(gender, avg)));
+                System.out.println("      %s: £%,.0f".formatted(gender, avg)));
         });
     }
 
@@ -807,18 +827,18 @@ public class StreamMathExercises {
      */
     static void sumSalaryByCountryAndDepartment() {
         Map<String, Map<String, Double>> result = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        Person::getHomeCountry,
-                        Collectors.groupingBy(
-                                p -> p.getProfession().department(),
-                                Collectors.summingDouble(
-                                        p -> p.getProfession().salary()))));
+            .collect(Collectors.groupingBy(
+                Person::getHomeCountry,
+                Collectors.groupingBy(
+                    p -> p.getProfession().department(),
+                    Collectors.summingDouble(
+                        p -> p.getProfession().salary()))));
 
         System.out.println("  ► 6.2 SUM salary by country → department:");
         result.forEach((country, deptMap) -> {
             System.out.println("    " + country + ":");
             deptMap.forEach((dept, sum) ->
-                    System.out.println("      %-20s £%,.0f".formatted(dept, sum)));
+                System.out.println("      %-20s £%,.0f".formatted(dept, sum)));
         });
     }
 
@@ -832,18 +852,18 @@ public class StreamMathExercises {
      */
     static void statsPerCompanyPerDepartment() {
         Map<String, Map<String, DoubleSummaryStatistics>> result = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().company(),
-                        Collectors.groupingBy(
-                                p -> p.getProfession().department(),
-                                Collectors.summarizingDouble(
-                                        p -> p.getProfession().salary()))));
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().company(),
+                Collectors.groupingBy(
+                    p -> p.getProfession().department(),
+                    Collectors.summarizingDouble(
+                        p -> p.getProfession().salary()))));
 
         System.out.println("  ► 6.3 Full stats per company → department:");
         result.forEach((company, deptMap) -> {
             System.out.println("    " + company + ":");
             deptMap.forEach((dept, stats) ->
-                    System.out.println("      %-15s %s".formatted(dept, formatStats(stats, "£"))));
+                System.out.println("      %-15s %s".formatted(dept, formatStats(stats, "£"))));
         });
     }
 
@@ -868,22 +888,28 @@ public class StreamMathExercises {
             WeightedAcc add(double value, double weight) {
                 return new WeightedAcc(weightedSum + value * weight, totalWeight + weight);
             }
+
             WeightedAcc merge(WeightedAcc other) {
-                return new WeightedAcc(weightedSum + other.weightedSum, totalWeight + other.totalWeight);
+                return new WeightedAcc(weightedSum + other.weightedSum,
+                    totalWeight + other.totalWeight);
             }
-            double average() { return totalWeight == 0 ? 0 : weightedSum / totalWeight; }
+
+            double average() {
+                return totalWeight == 0 ? 0 : weightedSum / totalWeight;
+            }
         }
 
         WeightedAcc result = EARNERS.stream()
-                .flatMap(p -> p.getSkills().stream()
-                        .map(s -> new double[]{s.level().getWeight(), p.getProfession().yearsExperience()}))
-                .reduce(
-                        new WeightedAcc(0, 0),
-                        (acc, pair) -> acc.add(pair[0], pair[1]),
-                        WeightedAcc::merge);
+            .flatMap(p -> p.getSkills().stream()
+                .map(
+                    s -> new double[] {s.level().getWeight(), p.getProfession().yearsExperience()}))
+            .reduce(
+                new WeightedAcc(0, 0),
+                (acc, pair) -> acc.add(pair[0], pair[1]),
+                WeightedAcc::merge);
 
         printExercise("7.1 Weighted avg proficiency (by experience)",
-                "%.2f / 4.0".formatted(result.average()));
+            "%.2f / 4.0".formatted(result.average()));
     }
 
     /**
@@ -896,20 +922,21 @@ public class StreamMathExercises {
      * the "best value" employees.</p>
      */
     static void salaryToExperienceRatio() {
-        record Ratio(String name, double ratio) {}
+        record Ratio(String name, double ratio) {
+        }
 
         List<Ratio> ratios = EARNERS.stream()
-                .filter(p -> p.getProfession().yearsExperience() > 0)
-                .map(p -> new Ratio(
-                        p.getFullName(),
-                        p.getProfession().salary() / p.getProfession().yearsExperience()))
-                .sorted(Comparator.comparingDouble(Ratio::ratio).reversed())
-                .toList();
+            .filter(p -> p.getProfession().yearsExperience() > 0)
+            .map(p -> new Ratio(
+                p.getFullName(),
+                p.getProfession().salary() / p.getProfession().yearsExperience()))
+            .sorted(Comparator.comparingDouble(Ratio::ratio).reversed())
+            .toList();
 
         System.out.println("  ► 7.2 Salary / Experience ratio (desc):");
         ratios.forEach(r ->
-                System.out.println("    %-20s £%,.0f per year of experience"
-                        .formatted(r.name, r.ratio)));
+            System.out.println("    %-20s £%,.0f per year of experience"
+                .formatted(r.name, r.ratio)));
     }
 
     /**
@@ -921,16 +948,16 @@ public class StreamMathExercises {
      */
     static void averageSalaryPerSkillHeld() {
         double totalSalary = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .sum();
+            .mapToDouble(p -> p.getProfession().salary())
+            .sum();
 
         long totalSkills = EARNERS.stream()
-                .mapToLong(p -> p.getSkills().size())
-                .sum();
+            .mapToLong(p -> p.getSkills().size())
+            .sum();
 
         printExercise("7.3 Avg salary per skill held",
-                "£%,.0f (total £%,.0f / %d skills)"
-                        .formatted(totalSalary / totalSkills, totalSalary, totalSkills));
+            "£%,.0f (total £%,.0f / %d skills)"
+                .formatted(totalSalary / totalSkills, totalSalary, totalSkills));
     }
 
     /**
@@ -941,21 +968,22 @@ public class StreamMathExercises {
      * two independent attributes, mapped and sorted.</p>
      */
     static void experienceToAgeRatio() {
-        record ExpRatio(String name, int age, int exp, double ratio) {}
+        record ExpRatio(String name, int age, int exp, double ratio) {
+        }
 
         List<ExpRatio> ratios = EARNERS.stream()
-                .map(p -> new ExpRatio(
-                        p.getFullName(),
-                        p.getAge(),
-                        p.getProfession().yearsExperience(),
-                        (double) p.getProfession().yearsExperience() / p.getAge()))
-                .sorted(Comparator.comparingDouble(ExpRatio::ratio).reversed())
-                .toList();
+            .map(p -> new ExpRatio(
+                p.getFullName(),
+                p.getAge(),
+                p.getProfession().yearsExperience(),
+                (double) p.getProfession().yearsExperience() / p.getAge()))
+            .sorted(Comparator.comparingDouble(ExpRatio::ratio).reversed())
+            .toList();
 
         System.out.println("  ► 7.4 Experience / Age ratio:");
         ratios.forEach(r ->
-                System.out.println("    %-20s age=%d, exp=%d, ratio=%.2f"
-                        .formatted(r.name, r.age, r.exp, r.ratio)));
+            System.out.println("    %-20s age=%d, exp=%d, ratio=%.2f"
+                .formatted(r.name, r.age, r.exp, r.ratio)));
     }
 
     // ═══════════════════════════════════════════════════════════════════
@@ -974,9 +1002,9 @@ public class StreamMathExercises {
      */
     static void medianSalary() {
         double median = computeMedian(
-                EARNERS.stream()
-                        .map(p -> p.getProfession().salary())
-                        .toList());
+            EARNERS.stream()
+                .map(p -> p.getProfession().salary())
+                .toList());
 
         printExercise("8.1 Median salary", "£%,.0f".formatted(median));
     }
@@ -991,14 +1019,16 @@ public class StreamMathExercises {
      */
     static void percentileSalary(int percentile) {
         List<Double> sorted = EARNERS.stream()
-                .map(p -> p.getProfession().salary())
-                .sorted()
-                .toList();
+            .map(p -> p.getProfession().salary())
+            .sorted()
+            .toList();
 
         double value = computePercentile(sorted, percentile);
 
-        printExercise("8.%d P%d salary".formatted(percentile == 25 ? 2 : percentile == 75 ? 3 : 4, percentile),
-                "£%,.0f".formatted(value));
+        printExercise(
+            "8.%d P%d salary".formatted(percentile == 25 ? 2 : percentile == 75 ? 3 : 4,
+                percentile),
+            "£%,.0f".formatted(value));
     }
 
     /**
@@ -1010,16 +1040,16 @@ public class StreamMathExercises {
      */
     static void interquartileRange() {
         List<Double> sorted = EARNERS.stream()
-                .map(p -> p.getProfession().salary())
-                .sorted()
-                .toList();
+            .map(p -> p.getProfession().salary())
+            .sorted()
+            .toList();
 
         double p25 = computePercentile(sorted, 25);
         double p75 = computePercentile(sorted, 75);
         double iqr = p75 - p25;
 
         printExercise("8.5 Interquartile range (P75-P25)",
-                "£%,.0f (P25=£%,.0f, P75=£%,.0f)".formatted(iqr, p25, p75));
+            "£%,.0f (P25=£%,.0f, P75=£%,.0f)".formatted(iqr, p25, p75));
     }
 
     /**
@@ -1032,31 +1062,37 @@ public class StreamMathExercises {
      */
     static void salaryQuartiles() {
         List<Double> sorted = EARNERS.stream()
-                .map(p -> p.getProfession().salary())
-                .sorted()
-                .toList();
+            .map(p -> p.getProfession().salary())
+            .sorted()
+            .toList();
 
         double q1 = computePercentile(sorted, 25);
         double q2 = computePercentile(sorted, 50);
         double q3 = computePercentile(sorted, 75);
 
         Map<String, List<String>> quartiles = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> {
-                            double s = p.getProfession().salary();
-                            if (s <= q1) return "Q1 (≤£%,.0f)".formatted(q1);
-                            if (s <= q2) return "Q2 (≤£%,.0f)".formatted(q2);
-                            if (s <= q3) return "Q3 (≤£%,.0f)".formatted(q3);
-                            return "Q4 (>£%,.0f)".formatted(q3);
-                        },
-                        TreeMap::new,
-                        Collectors.mapping(
-                                p -> "%s (£%,.0f)".formatted(p.getFullName(), p.getProfession().salary()),
-                                Collectors.toList())));
+            .collect(Collectors.groupingBy(
+                p -> {
+                    double s = p.getProfession().salary();
+                    if (s <= q1) {
+                        return "Q1 (≤£%,.0f)".formatted(q1);
+                    }
+                    if (s <= q2) {
+                        return "Q2 (≤£%,.0f)".formatted(q2);
+                    }
+                    if (s <= q3) {
+                        return "Q3 (≤£%,.0f)".formatted(q3);
+                    }
+                    return "Q4 (>£%,.0f)".formatted(q3);
+                },
+                TreeMap::new,
+                Collectors.mapping(
+                    p -> "%s (£%,.0f)".formatted(p.getFullName(), p.getProfession().salary()),
+                    Collectors.toList())));
 
         System.out.println("  ► 8.6 Salary quartile groups:");
         quartiles.forEach((q, people) ->
-                System.out.println("    %-20s → %s".formatted(q, people)));
+            System.out.println("    %-20s → %s".formatted(q, people)));
     }
 
     // ═══════════════════════════════════════════════════════════════════
@@ -1080,20 +1116,20 @@ public class StreamMathExercises {
     static void varianceAndStdDeviation() {
         // Two-pass approach (clearer)
         double mean = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .average().orElse(0);
+            .mapToDouble(p -> p.getProfession().salary())
+            .average().orElse(0);
 
         double variance = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .map(s -> Math.pow(s - mean, 2))
-                .average().orElse(0);
+            .mapToDouble(p -> p.getProfession().salary())
+            .map(s -> Math.pow(s - mean, 2))
+            .average().orElse(0);
 
         double stdDev = Math.sqrt(variance);
 
         printExercise("9.1 Population variance", "£²%,.0f".formatted(variance));
         printExercise("    Standard deviation", "£%,.0f".formatted(stdDev));
         printExercise("    Mean ± 1 StdDev",
-                "£%,.0f – £%,.0f".formatted(mean - stdDev, mean + stdDev));
+            "£%,.0f – £%,.0f".formatted(mean - stdDev, mean + stdDev));
     }
 
     /**
@@ -1108,29 +1144,30 @@ public class StreamMathExercises {
      */
     static void zScoresPerPerson() {
         double mean = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .average().orElse(0);
+            .mapToDouble(p -> p.getProfession().salary())
+            .average().orElse(0);
 
         double stdDev = Math.sqrt(EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .map(s -> Math.pow(s - mean, 2))
-                .average().orElse(0));
+            .mapToDouble(p -> p.getProfession().salary())
+            .map(s -> Math.pow(s - mean, 2))
+            .average().orElse(0));
 
-        record ZScore(String name, double salary, double z) {}
+        record ZScore(String name, double salary, double z) {
+        }
 
         List<ZScore> zScores = EARNERS.stream()
-                .map(p -> new ZScore(
-                        p.getFullName(),
-                        p.getProfession().salary(),
-                        (p.getProfession().salary() - mean) / stdDev))
-                .sorted(Comparator.comparingDouble(ZScore::z).reversed())
-                .toList();
+            .map(p -> new ZScore(
+                p.getFullName(),
+                p.getProfession().salary(),
+                (p.getProfession().salary() - mean) / stdDev))
+            .sorted(Comparator.comparingDouble(ZScore::z).reversed())
+            .toList();
 
         System.out.println("  ► 9.2 Z-scores (mean=£%,.0f, σ=£%,.0f):".formatted(mean, stdDev));
         zScores.forEach(z ->
-                System.out.println("    %-20s £%,8.0f  z=%+.2f %s"
-                        .formatted(z.name, z.salary, z.z,
-                                Math.abs(z.z) > 1.5 ? "⚠ outlier" : "")));
+            System.out.println("    %-20s £%,8.0f  z=%+.2f %s"
+                .formatted(z.name, z.salary, z.z,
+                    Math.abs(z.z) > 1.5 ? "⚠ outlier" : "")));
     }
 
     /**
@@ -1144,23 +1181,23 @@ public class StreamMathExercises {
      */
     static void coefficientOfVariationByCompany() {
         Map<String, List<Double>> salariesByCompany = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().company(),
-                        Collectors.mapping(
-                                p -> p.getProfession().salary(),
-                                Collectors.toList())));
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().company(),
+                Collectors.mapping(
+                    p -> p.getProfession().salary(),
+                    Collectors.toList())));
 
         System.out.println("  ► 9.3 Coefficient of Variation by company:");
         salariesByCompany.forEach((company, salaries) -> {
             double mean = salaries.stream().mapToDouble(d -> d).average().orElse(0);
             double variance = salaries.stream().mapToDouble(d -> d)
-                    .map(s -> Math.pow(s - mean, 2)).average().orElse(0);
+                .map(s -> Math.pow(s - mean, 2)).average().orElse(0);
             double stdDev = Math.sqrt(variance);
             double cv = mean == 0 ? 0 : (stdDev / mean) * 100;
 
             System.out.println("    %-20s mean=£%,8.0f  σ=£%,8.0f  CV=%.1f%%  %s"
-                    .formatted(company, mean, stdDev, cv,
-                            cv > 30 ? "(high disparity)" : "(relatively uniform)"));
+                .formatted(company, mean, stdDev, cv,
+                    cv > 30 ? "(high disparity)" : "(relatively uniform)"));
         });
     }
 
@@ -1182,20 +1219,20 @@ public class StreamMathExercises {
      */
     static void cumulativeSalarySum() {
         List<double[]> sorted = EARNERS.stream()
-                .sorted(Comparator.comparingDouble(p -> p.getProfession().salary()))
-                .map(p -> new double[]{p.getProfession().salary()})
-                .toList();
+            .sorted(Comparator.comparingDouble(p -> p.getProfession().salary()))
+            .map(p -> new double[] {p.getProfession().salary()})
+            .toList();
 
         double runningTotal = 0;
         System.out.println("  ► 10.1 Cumulative salary sum:");
         List<Person> sortedPeople = EARNERS.stream()
-                .sorted(Comparator.comparingDouble(p -> p.getProfession().salary()))
-                .toList();
+            .sorted(Comparator.comparingDouble(p -> p.getProfession().salary()))
+            .toList();
 
         for (Person p : sortedPeople) {
             runningTotal += p.getProfession().salary();
             System.out.println("    %-20s £%,8.0f  cumulative: £%,10.0f"
-                    .formatted(p.getFullName(), p.getProfession().salary(), runningTotal));
+                .formatted(p.getFullName(), p.getProfession().salary(), runningTotal));
         }
     }
 
@@ -1212,20 +1249,20 @@ public class StreamMathExercises {
      */
     static void movingAverageSalary(int windowSize) {
         List<Person> sorted = EARNERS.stream()
-                .sorted(Comparator.comparingDouble(p -> p.getProfession().salary()))
-                .toList();
+            .sorted(Comparator.comparingDouble(p -> p.getProfession().salary()))
+            .toList();
 
         System.out.println("  ► 10.2 Moving average salary (window=%d):".formatted(windowSize));
         IntStream.range(0, sorted.size()).forEach(i -> {
             int start = Math.max(0, i - windowSize + 1);
             double movingAvg = IntStream.rangeClosed(start, i)
-                    .mapToDouble(j -> sorted.get(j).getProfession().salary())
-                    .average().orElse(0);
+                .mapToDouble(j -> sorted.get(j).getProfession().salary())
+                .average().orElse(0);
 
             System.out.println("    %-20s salary=£%,8.0f  MA(%d)=£%,8.0f"
-                    .formatted(sorted.get(i).getFullName(),
-                            sorted.get(i).getProfession().salary(),
-                            windowSize, movingAvg));
+                .formatted(sorted.get(i).getFullName(),
+                    sorted.get(i).getProfession().salary(),
+                    windowSize, movingAvg));
         });
     }
 
@@ -1238,20 +1275,20 @@ public class StreamMathExercises {
      */
     static void cumulativeHeadcountByExperience() {
         int maxExp = EARNERS.stream()
-                .mapToInt(p -> p.getProfession().yearsExperience())
-                .max().orElse(0);
+            .mapToInt(p -> p.getProfession().yearsExperience())
+            .max().orElse(0);
 
         System.out.println("  ► 10.3 Cumulative headcount (≥ N years experience):");
         IntStream.rangeClosed(0, maxExp)
-                .filter(threshold -> threshold % 2 == 0) // every 2 years
-                .forEach(threshold -> {
-                    long count = EARNERS.stream()
-                            .filter(p -> p.getProfession().yearsExperience() >= threshold)
-                            .count();
-                    System.out.println("    ≥ %2d years: %d people  %s"
-                            .formatted(threshold, count,
-                                    "█".repeat((int) count * 2)));
-                });
+            .filter(threshold -> threshold % 2 == 0) // every 2 years
+            .forEach(threshold -> {
+                long count = EARNERS.stream()
+                    .filter(p -> p.getProfession().yearsExperience() >= threshold)
+                    .count();
+                System.out.println("    ≥ %2d years: %d people  %s"
+                    .formatted(threshold, count,
+                        "█".repeat((int) count * 2)));
+            });
     }
 
     // ═══════════════════════════════════════════════════════════════════
@@ -1267,20 +1304,20 @@ public class StreamMathExercises {
      */
     static void denseRankBySalary() {
         List<Person> sorted = EARNERS.stream()
-                .sorted(Comparator.comparingDouble(
-                        (Person p) -> p.getProfession().salary()).reversed())
-                .toList();
+            .sorted(Comparator.comparingDouble(
+                (Person p) -> p.getProfession().salary()).reversed())
+            .toList();
 
         System.out.println("  ► 11.1 Dense rank by salary:");
         int rank = 1;
         for (int i = 0; i < sorted.size(); i++) {
             if (i > 0 && sorted.get(i).getProfession().salary()
-                    != sorted.get(i - 1).getProfession().salary()) {
+                != sorted.get(i - 1).getProfession().salary()) {
                 rank++;
             }
             System.out.println("    Rank %2d: %-20s £%,8.0f"
-                    .formatted(rank, sorted.get(i).getFullName(),
-                            sorted.get(i).getProfession().salary()));
+                .formatted(rank, sorted.get(i).getFullName(),
+                    sorted.get(i).getProfession().salary()));
         }
     }
 
@@ -1296,17 +1333,17 @@ public class StreamMathExercises {
      */
     static void topNPerCompany(int n) {
         Map<String, List<String>> topPerCompany = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().company(),
-                        Collectors.collectingAndThen(
-                                Collectors.toList(),
-                                list -> list.stream()
-                                        .sorted(Comparator.comparingDouble(
-                                                (Person p) -> p.getProfession().salary()).reversed())
-                                        .limit(n)
-                                        .map(p -> "%s (£%,.0f)".formatted(
-                                                p.getFullName(), p.getProfession().salary()))
-                                        .toList())));
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().company(),
+                Collectors.collectingAndThen(
+                    Collectors.toList(),
+                    list -> list.stream()
+                        .sorted(Comparator.comparingDouble(
+                            (Person p) -> p.getProfession().salary()).reversed())
+                        .limit(n)
+                        .map(p -> "%s (£%,.0f)".formatted(
+                            p.getFullName(), p.getProfession().salary()))
+                        .toList())));
 
         printExercise("11.2 Top %d earners per company".formatted(n), topPerCompany);
     }
@@ -1325,25 +1362,26 @@ public class StreamMathExercises {
     static void percentileRankPerPerson() {
         long total = EARNERS.size();
 
-        record PercentileRank(String name, double salary, double percentile) {}
+        record PercentileRank(String name, double salary, double percentile) {
+        }
 
         List<PercentileRank> ranks = EARNERS.stream()
-                .map(p -> {
-                    long countBelow = EARNERS.stream()
-                            .filter(other -> other.getProfession().salary()
-                                    < p.getProfession().salary())
-                            .count();
-                    double pctRank = total <= 1 ? 100.0 : (countBelow * 100.0) / (total - 1);
-                    return new PercentileRank(p.getFullName(),
-                            p.getProfession().salary(), pctRank);
-                })
-                .sorted(Comparator.comparingDouble(PercentileRank::percentile).reversed())
-                .toList();
+            .map(p -> {
+                long countBelow = EARNERS.stream()
+                    .filter(other -> other.getProfession().salary()
+                        < p.getProfession().salary())
+                    .count();
+                double pctRank = total <= 1 ? 100.0 : (countBelow * 100.0) / (total - 1);
+                return new PercentileRank(p.getFullName(),
+                    p.getProfession().salary(), pctRank);
+            })
+            .sorted(Comparator.comparingDouble(PercentileRank::percentile).reversed())
+            .toList();
 
         System.out.println("  ► 11.3 Percentile rank:");
         ranks.forEach(r ->
-                System.out.println("    %-20s £%,8.0f  → P%.0f (earns more than %.0f%% of people)"
-                        .formatted(r.name, r.salary, r.percentile, r.percentile)));
+            System.out.println("    %-20s £%,8.0f  → P%.0f (earns more than %.0f%% of people)"
+                .formatted(r.name, r.salary, r.percentile, r.percentile)));
     }
 
     // ═══════════════════════════════════════════════════════════════════
@@ -1366,33 +1404,33 @@ public class StreamMathExercises {
      */
     static void experienceVsSalaryCorrelation() {
         double meanExp = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().yearsExperience())
-                .average().orElse(0);
+            .mapToDouble(p -> p.getProfession().yearsExperience())
+            .average().orElse(0);
         double meanSal = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .average().orElse(0);
+            .mapToDouble(p -> p.getProfession().salary())
+            .average().orElse(0);
 
         double crossProduct = EARNERS.stream()
-                .mapToDouble(p ->
-                        (p.getProfession().yearsExperience() - meanExp) *
-                                (p.getProfession().salary() - meanSal))
-                .sum();
+            .mapToDouble(p ->
+                (p.getProfession().yearsExperience() - meanExp) *
+                    (p.getProfession().salary() - meanSal))
+            .sum();
 
         double varExp = EARNERS.stream()
-                .mapToDouble(p -> Math.pow(p.getProfession().yearsExperience() - meanExp, 2))
-                .sum();
+            .mapToDouble(p -> Math.pow(p.getProfession().yearsExperience() - meanExp, 2))
+            .sum();
 
         double varSal = EARNERS.stream()
-                .mapToDouble(p -> Math.pow(p.getProfession().salary() - meanSal, 2))
-                .sum();
+            .mapToDouble(p -> Math.pow(p.getProfession().salary() - meanSal, 2))
+            .sum();
 
         double r = crossProduct / Math.sqrt(varExp * varSal);
 
         printExercise("12.1 Pearson correlation (experience vs salary)",
-                "r = %.4f %s".formatted(r,
-                        r > 0.7 ? "(strong positive)" :
-                                r > 0.3 ? "(moderate positive)" :
-                                        r > -0.3 ? "(weak/none)" : "(negative)"));
+            "r = %.4f %s".formatted(r,
+                r > 0.7 ? "(strong positive)" :
+                    r > 0.3 ? "(moderate positive)" :
+                        r > -0.3 ? "(weak/none)" : "(negative)"));
     }
 
     /**
@@ -1404,9 +1442,9 @@ public class StreamMathExercises {
      */
     static void salaryGapBetweenGenders() {
         Map<Gender, Double> avgByGender = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        Person::getGender,
-                        Collectors.averagingDouble(p -> p.getProfession().salary())));
+            .collect(Collectors.groupingBy(
+                Person::getGender,
+                Collectors.averagingDouble(p -> p.getProfession().salary())));
 
         double maleAvg = avgByGender.getOrDefault(Gender.MALE, 0.0);
         double femaleAvg = avgByGender.getOrDefault(Gender.FEMALE, 0.0);
@@ -1414,8 +1452,8 @@ public class StreamMathExercises {
         double gapPercent = femaleAvg == 0 ? 0 : (gap / femaleAvg) * 100;
 
         printExercise("12.2 Gender salary comparison",
-                "Male avg=£%,.0f, Female avg=£%,.0f, Gap=£%,.0f (%.1f%%)"
-                        .formatted(maleAvg, femaleAvg, gap, gapPercent));
+            "Male avg=£%,.0f, Female avg=£%,.0f, Gap=£%,.0f (%.1f%%)"
+                .formatted(maleAvg, femaleAvg, gap, gapPercent));
     }
 
     /**
@@ -1428,24 +1466,24 @@ public class StreamMathExercises {
      */
     static void aboveOrBelowCompanyAverage() {
         Map<String, Double> companyAvg = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> p.getProfession().company(),
-                        Collectors.averagingDouble(p -> p.getProfession().salary())));
+            .collect(Collectors.groupingBy(
+                p -> p.getProfession().company(),
+                Collectors.averagingDouble(p -> p.getProfession().salary())));
 
         System.out.println("  ► 12.3 Above/below company average:");
         EARNERS.stream()
-                .sorted(Comparator.comparing((Person p) -> p.getProfession().company())
-                        .thenComparingDouble(p -> p.getProfession().salary()))
-                .forEach(p -> {
-                    double avg = companyAvg.get(p.getProfession().company());
-                    double diff = p.getProfession().salary() - avg;
-                    String indicator = diff >= 0 ? "▲" : "▼";
-                    System.out.println("    [%-15s] %-20s £%,8.0f  %s £%,8.0f vs avg £%,8.0f"
-                            .formatted(p.getProfession().company(),
-                                    p.getFullName(),
-                                    p.getProfession().salary(),
-                                    indicator, Math.abs(diff), avg));
-                });
+            .sorted(Comparator.comparing((Person p) -> p.getProfession().company())
+                .thenComparingDouble(p -> p.getProfession().salary()))
+            .forEach(p -> {
+                double avg = companyAvg.get(p.getProfession().company());
+                double diff = p.getProfession().salary() - avg;
+                String indicator = diff >= 0 ? "▲" : "▼";
+                System.out.println("    [%-15s] %-20s £%,8.0f  %s £%,8.0f vs avg £%,8.0f"
+                    .formatted(p.getProfession().company(),
+                        p.getFullName(),
+                        p.getProfession().salary(),
+                        indicator, Math.abs(diff), avg));
+            });
     }
 
     // ═══════════════════════════════════════════════════════════════════
@@ -1463,18 +1501,19 @@ public class StreamMathExercises {
      */
     static void salaryHistogram(double binWidth) {
         Map<String, Long> histogram = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> {
-                            long bin = (long) (Math.floor(p.getProfession().salary() / binWidth) * binWidth);
-                            return "£%,6d – £%,6d".formatted(bin, (long) (bin + binWidth - 1));
-                        },
-                        TreeMap::new,
-                        Collectors.counting()));
+            .collect(Collectors.groupingBy(
+                p -> {
+                    long bin =
+                        (long) (Math.floor(p.getProfession().salary() / binWidth) * binWidth);
+                    return "£%,6d – £%,6d".formatted(bin, (long) (bin + binWidth - 1));
+                },
+                TreeMap::new,
+                Collectors.counting()));
 
         System.out.println("  ► 13.1 Salary histogram (bin=£%,.0f):".formatted(binWidth));
         histogram.forEach((bin, count) ->
-                System.out.println("    %s │%s %d"
-                        .formatted(bin, "██".repeat(count.intValue()), count)));
+            System.out.println("    %s │%s %d"
+                .formatted(bin, "██".repeat(count.intValue()), count)));
     }
 
     /**
@@ -1485,19 +1524,19 @@ public class StreamMathExercises {
      */
     static void experienceHistogram() {
         Map<String, Long> histogram = EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> {
-                            int exp = p.getProfession().yearsExperience();
-                            int bin = (exp / 5) * 5;
-                            return "%2d–%2d yrs".formatted(bin, bin + 4);
-                        },
-                        TreeMap::new,
-                        Collectors.counting()));
+            .collect(Collectors.groupingBy(
+                p -> {
+                    int exp = p.getProfession().yearsExperience();
+                    int bin = (exp / 5) * 5;
+                    return "%2d–%2d yrs".formatted(bin, bin + 4);
+                },
+                TreeMap::new,
+                Collectors.counting()));
 
         System.out.println("  ► 13.2 Experience histogram:");
         histogram.forEach((bin, count) ->
-                System.out.println("    %s │%s %d"
-                        .formatted(bin, "██".repeat(count.intValue()), count)));
+            System.out.println("    %s │%s %d"
+                .formatted(bin, "██".repeat(count.intValue()), count)));
     }
 
     /**
@@ -1505,18 +1544,18 @@ public class StreamMathExercises {
      */
     static void ageHistogram() {
         Map<String, Long> histogram = PEOPLE.stream()
-                .collect(Collectors.groupingBy(
-                        p -> {
-                            int bin = (p.getAge() / 5) * 5;
-                            return "%2d–%2d".formatted(bin, bin + 4);
-                        },
-                        TreeMap::new,
-                        Collectors.counting()));
+            .collect(Collectors.groupingBy(
+                p -> {
+                    int bin = (p.getAge() / 5) * 5;
+                    return "%2d–%2d".formatted(bin, bin + 4);
+                },
+                TreeMap::new,
+                Collectors.counting()));
 
         System.out.println("  ► 13.3 Age histogram:");
         histogram.forEach((bin, count) ->
-                System.out.println("    %s │%s %d"
-                        .formatted(bin, "██".repeat(count.intValue()), count)));
+            System.out.println("    %s │%s %d"
+                .formatted(bin, "██".repeat(count.intValue()), count)));
     }
 
     /**
@@ -1528,18 +1567,18 @@ public class StreamMathExercises {
      */
     static void skillProficiencyDistribution() {
         Map<ProficiencyLevel, Long> distribution = PEOPLE.stream()
-                .flatMap(p -> p.getSkills().stream())
-                .collect(Collectors.groupingBy(
-                        Skill::level,
-                        () -> new TreeMap<>(Comparator.comparingInt(ProficiencyLevel::getWeight)),
-                        Collectors.counting()));
+            .flatMap(p -> p.getSkills().stream())
+            .collect(Collectors.groupingBy(
+                Skill::level,
+                () -> new TreeMap<>(Comparator.comparingInt(ProficiencyLevel::getWeight)),
+                Collectors.counting()));
 
         System.out.println("  ► 13.4 Skill proficiency distribution:");
         long total = distribution.values().stream().mapToLong(Long::longValue).sum();
         distribution.forEach((level, count) ->
-                System.out.println("    %-14s │%s %d (%.0f%%)"
-                        .formatted(level, "██".repeat(count.intValue()),
-                                count, count * 100.0 / total)));
+            System.out.println("    %-14s │%s %d (%.0f%%)"
+                .formatted(level, "██".repeat(count.intValue()),
+                    count, count * 100.0 / total)));
     }
 
     // ═══════════════════════════════════════════════════════════════════
@@ -1555,18 +1594,19 @@ public class StreamMathExercises {
      * two separate stream traversals.</p>
      */
     static void teeingSumAndCount() {
-        record SumAndCount(double sum, long count, double average) {}
+        record SumAndCount(double sum, long count, double average) {
+        }
 
         SumAndCount result = EARNERS.stream()
-                .collect(Collectors.teeing(
-                        Collectors.summingDouble(p -> p.getProfession().salary()),
-                        Collectors.counting(),
-                        (sum, count) -> new SumAndCount(sum, count,
-                                count == 0 ? 0 : sum / count)));
+            .collect(Collectors.teeing(
+                Collectors.summingDouble(p -> p.getProfession().salary()),
+                Collectors.counting(),
+                (sum, count) -> new SumAndCount(sum, count,
+                    count == 0 ? 0 : sum / count)));
 
         printExercise("14.1 Teeing: sum + count → average",
-                "sum=£%,.0f, count=%d, avg=£%,.0f"
-                        .formatted(result.sum, result.count, result.average));
+            "sum=£%,.0f, count=%d, avg=£%,.0f"
+                .formatted(result.sum, result.count, result.average));
     }
 
     /**
@@ -1576,20 +1616,21 @@ public class StreamMathExercises {
      * separately (two passes), teeing does it in one.</p>
      */
     static void teeingMinMaxRange() {
-        record MinMaxRange(double min, double max, double range) {}
+        record MinMaxRange(double min, double max, double range) {
+        }
 
         MinMaxRange result = EARNERS.stream()
-                .map(p -> p.getProfession().salary())
-                .collect(Collectors.teeing(
-                        Collectors.minBy(Double::compareTo),
-                        Collectors.maxBy(Double::compareTo),
-                        (min, max) -> new MinMaxRange(
-                                min.orElse(0.0), max.orElse(0.0),
-                                max.orElse(0.0) - min.orElse(0.0))));
+            .map(p -> p.getProfession().salary())
+            .collect(Collectors.teeing(
+                Collectors.minBy(Double::compareTo),
+                Collectors.maxBy(Double::compareTo),
+                (min, max) -> new MinMaxRange(
+                    min.orElse(0.0), max.orElse(0.0),
+                    max.orElse(0.0) - min.orElse(0.0))));
 
         printExercise("14.2 Teeing: min, max & range",
-                "min=£%,.0f, max=£%,.0f, range=£%,.0f"
-                        .formatted(result.min, result.max, result.range));
+            "min=£%,.0f, max=£%,.0f, range=£%,.0f"
+                .formatted(result.min, result.max, result.range));
     }
 
     /**
@@ -1601,19 +1642,21 @@ public class StreamMathExercises {
      * The merger function calls our helper to find the median.</p>
      */
     static void teeingMeanAndMedian() {
-        record MeanMedian(double mean, double median) {}
+        record MeanMedian(double mean, double median) {
+        }
 
         MeanMedian result = EARNERS.stream()
-                .map(p -> p.getProfession().salary())
-                .collect(Collectors.teeing(
-                        Collectors.averagingDouble(d -> d),
-                        Collectors.toList(),
-                        (mean, list) -> new MeanMedian(mean, computeMedian(list))));
+            .map(p -> p.getProfession().salary())
+            .collect(Collectors.teeing(
+                Collectors.averagingDouble(d -> d),
+                Collectors.toList(),
+                (mean, list) -> new MeanMedian(mean, computeMedian(list))));
 
         printExercise("14.3 Teeing: mean & median",
-                "mean=£%,.0f, median=£%,.0f, skew=%s"
-                        .formatted(result.mean, result.median,
-                                result.mean > result.median ? "right (mean > median)" : "left (median > mean)"));
+            "mean=£%,.0f, median=£%,.0f, skew=%s"
+                .formatted(result.mean, result.median,
+                    result.mean > result.median ? "right (mean > median)" :
+                        "left (median > mean)"));
     }
 
     /**
@@ -1621,22 +1664,23 @@ public class StreamMathExercises {
      * using teeing with maxBy and minBy.
      */
     static void teeingTopAndBottomEarner() {
-        record TopBottom(String top, String bottom) {}
+        record TopBottom(String top, String bottom) {
+        }
 
         TopBottom result = EARNERS.stream()
-                .collect(Collectors.teeing(
-                        Collectors.maxBy(Comparator.comparingDouble(
-                                p -> p.getProfession().salary())),
-                        Collectors.minBy(Comparator.comparingDouble(
-                                p -> p.getProfession().salary())),
-                        (max, min) -> new TopBottom(
-                                max.map(p -> "%s (£%,.0f)".formatted(
-                                        p.getFullName(), p.getProfession().salary())).orElse("N/A"),
-                                min.map(p -> "%s (£%,.0f)".formatted(
-                                        p.getFullName(), p.getProfession().salary())).orElse("N/A"))));
+            .collect(Collectors.teeing(
+                Collectors.maxBy(Comparator.comparingDouble(
+                    p -> p.getProfession().salary())),
+                Collectors.minBy(Comparator.comparingDouble(
+                    p -> p.getProfession().salary())),
+                (max, min) -> new TopBottom(
+                    max.map(p -> "%s (£%,.0f)".formatted(
+                        p.getFullName(), p.getProfession().salary())).orElse("N/A"),
+                    min.map(p -> "%s (£%,.0f)".formatted(
+                        p.getFullName(), p.getProfession().salary())).orElse("N/A"))));
 
         printExercise("14.4 Teeing: top & bottom earner",
-                "Top: %s, Bottom: %s".formatted(result.top, result.bottom));
+            "Top: %s, Bottom: %s".formatted(result.top, result.bottom));
     }
 
     /**
@@ -1648,22 +1692,23 @@ public class StreamMathExercises {
      * the list using the computed mean.</p>
      */
     static void teeingAboveBelowAverage() {
-        record AboveBelow(long above, long below, double avg) {}
+        record AboveBelow(long above, long below, double avg) {
+        }
 
         AboveBelow result = EARNERS.stream()
-                .collect(Collectors.teeing(
-                        Collectors.averagingDouble(p -> p.getProfession().salary()),
-                        Collectors.toList(),
-                        (avg, list) -> {
-                            long above = list.stream()
-                                    .filter(p -> p.getProfession().salary() >= avg)
-                                    .count();
-                            return new AboveBelow(above, list.size() - above, avg);
-                        }));
+            .collect(Collectors.teeing(
+                Collectors.averagingDouble(p -> p.getProfession().salary()),
+                Collectors.toList(),
+                (avg, list) -> {
+                    long above = list.stream()
+                        .filter(p -> p.getProfession().salary() >= avg)
+                        .count();
+                    return new AboveBelow(above, list.size() - above, avg);
+                }));
 
         printExercise("14.5 Teeing: above/below average",
-                "%d above, %d below avg of £%,.0f"
-                        .formatted(result.above, result.below, result.avg));
+            "%d above, %d below avg of £%,.0f"
+                .formatted(result.above, result.below, result.avg));
     }
 
     // ═══════════════════════════════════════════════════════════════════
@@ -1685,19 +1730,19 @@ public class StreamMathExercises {
 
         // ── Global Statistics ──
         DoubleSummaryStatistics global = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .summaryStatistics();
+            .mapToDouble(p -> p.getProfession().salary())
+            .summaryStatistics();
 
         List<Double> sortedSalaries = EARNERS.stream()
-                .map(p -> p.getProfession().salary())
-                .sorted()
-                .toList();
+            .map(p -> p.getProfession().salary())
+            .sorted()
+            .toList();
 
         double median = computeMedian(sortedSalaries);
         double variance = EARNERS.stream()
-                .mapToDouble(p -> p.getProfession().salary())
-                .map(s -> Math.pow(s - global.getAverage(), 2))
-                .average().orElse(0);
+            .mapToDouble(p -> p.getProfession().salary())
+            .map(s -> Math.pow(s - global.getAverage(), 2))
+            .average().orElse(0);
         double stdDev = Math.sqrt(variance);
 
         System.out.println("  ┌─────────────────────────────────────────┐");
@@ -1711,61 +1756,69 @@ public class StreamMathExercises {
         System.out.println("  │  Max Salary    : £%,.0f".formatted(global.getMax()));
         System.out.println("  │  Std Deviation : £%,.0f".formatted(stdDev));
         System.out.println("  │  P25 / P75     : £%,.0f / £%,.0f".formatted(
-                computePercentile(sortedSalaries, 25),
-                computePercentile(sortedSalaries, 75)));
+            computePercentile(sortedSalaries, 25),
+            computePercentile(sortedSalaries, 75)));
         System.out.println("  └─────────────────────────────────────────┘\n");
 
         // ── Per-Company Breakdown ──
-        System.out.println("  ┌─────────────────────────────────────────────────────────────────────┐");
-        System.out.println("  │                     PER-COMPANY BREAKDOWN                            │");
-        System.out.println("  ├──────────────────┬──────┬────────────┬────────────┬─────────────────┤");
-        System.out.println("  │ Company          │ Head │ Avg Salary │ Top Earner │ Skill Coverage  │");
-        System.out.println("  ├──────────────────┼──────┼────────────┼────────────┼─────────────────┤");
+        System.out.println(
+            "  ┌─────────────────────────────────────────────────────────────────────┐");
+        System.out.println(
+            "  │                     PER-COMPANY BREAKDOWN                            │");
+        System.out.println(
+            "  ├──────────────────┬──────┬────────────┬────────────┬─────────────────┤");
+        System.out.println(
+            "  │ Company          │ Head │ Avg Salary │ Top Earner │ Skill Coverage  │");
+        System.out.println(
+            "  ├──────────────────┼──────┼────────────┼────────────┼─────────────────┤");
 
         EARNERS.stream()
-                .collect(Collectors.groupingBy(p -> p.getProfession().company()))
-                .forEach((company, employees) -> {
-                    double avg = employees.stream()
-                            .mapToDouble(p -> p.getProfession().salary())
-                            .average().orElse(0);
-                    String topEarner = employees.stream()
-                            .max(Comparator.comparingDouble(p -> p.getProfession().salary()))
-                            .map(Person::getFullName).orElse("N/A");
-                    long uniqueSkills = employees.stream()
-                            .flatMap(p -> p.getSkills().stream())
-                            .map(Skill::name).distinct().count();
+            .collect(Collectors.groupingBy(p -> p.getProfession().company()))
+            .forEach((company, employees) -> {
+                double avg = employees.stream()
+                    .mapToDouble(p -> p.getProfession().salary())
+                    .average().orElse(0);
+                String topEarner = employees.stream()
+                    .max(Comparator.comparingDouble(p -> p.getProfession().salary()))
+                    .map(Person::getFullName).orElse("N/A");
+                long uniqueSkills = employees.stream()
+                    .flatMap(p -> p.getSkills().stream())
+                    .map(Skill::name).distinct().count();
 
-                    System.out.println("  │ %-16s │  %2d  │ £%,8.0f │ %-10s │ %2d unique skills│"
-                            .formatted(company, employees.size(), avg,
-                                    topEarner, uniqueSkills));
-                });
-        System.out.println("  └──────────────────┴──────┴────────────┴────────────┴─────────────────┘\n");
+                System.out.println("  │ %-16s │  %2d  │ £%,8.0f │ %-10s │ %2d unique skills│"
+                    .formatted(company, employees.size(), avg,
+                        topEarner, uniqueSkills));
+            });
+        System.out.println(
+            "  └──────────────────┴──────┴────────────┴────────────┴─────────────────┘\n");
 
         // ── Salary Distribution Bar Chart ──
         System.out.println("  SALARY DISTRIBUTION:");
         double binWidth = 20_000;
         EARNERS.stream()
-                .collect(Collectors.groupingBy(
-                        p -> (long) (Math.floor(p.getProfession().salary() / binWidth) * binWidth),
-                        TreeMap::new,
-                        Collectors.counting()))
-                .forEach((bin, count) ->
-                        System.out.println("  £%,6d+ │%s %d"
-                                .formatted(bin, "████".repeat(count.intValue()), count)));
+            .collect(Collectors.groupingBy(
+                p -> (long) (Math.floor(p.getProfession().salary() / binWidth) * binWidth),
+                TreeMap::new,
+                Collectors.counting()))
+            .forEach((bin, count) ->
+                System.out.println("  £%,6d+ │%s %d"
+                    .formatted(bin, "████".repeat(count.intValue()), count)));
 
         // ── Outlier Detection ──
         System.out.println("\n  OUTLIER DETECTION (|z| > 1.5):");
         EARNERS.stream()
-                .filter(p -> Math.abs((p.getProfession().salary() - global.getAverage()) / stdDev) > 1.5)
-                .forEach(p -> {
-                    double z = (p.getProfession().salary() - global.getAverage()) / stdDev;
-                    System.out.println("  ⚠ %-20s £%,8.0f  z=%+.2f"
-                            .formatted(p.getFullName(), p.getProfession().salary(), z));
-                });
+            .filter(
+                p -> Math.abs((p.getProfession().salary() - global.getAverage()) / stdDev) > 1.5)
+            .forEach(p -> {
+                double z = (p.getProfession().salary() - global.getAverage()) / stdDev;
+                System.out.println("  ⚠ %-20s £%,8.0f  z=%+.2f"
+                    .formatted(p.getFullName(), p.getProfession().salary(), z));
+            });
 
         long outlierCount = EARNERS.stream()
-                .filter(p -> Math.abs((p.getProfession().salary() - global.getAverage()) / stdDev) > 1.5)
-                .count();
+            .filter(
+                p -> Math.abs((p.getProfession().salary() - global.getAverage()) / stdDev) > 1.5)
+            .count();
         if (outlierCount == 0) {
             System.out.println("  ✓ No salary outliers detected.");
         }
@@ -1782,8 +1835,12 @@ public class StreamMathExercises {
     private static double computeMedian(List<Double> values) {
         List<Double> sorted = values.stream().sorted().toList();
         int n = sorted.size();
-        if (n == 0) return 0;
-        if (n % 2 == 1) return sorted.get(n / 2);
+        if (n == 0) {
+            return 0;
+        }
+        if (n % 2 == 1) {
+            return sorted.get(n / 2);
+        }
         return (sorted.get(n / 2 - 1) + sorted.get(n / 2)) / 2.0;
     }
 
@@ -1796,29 +1853,33 @@ public class StreamMathExercises {
      * @return the interpolated percentile value
      */
     private static double computePercentile(List<Double> sorted, int percentile) {
-        if (sorted.isEmpty()) return 0;
+        if (sorted.isEmpty()) {
+            return 0;
+        }
         double index = (percentile / 100.0) * (sorted.size() - 1);
         int lower = (int) Math.floor(index);
         int upper = (int) Math.ceil(index);
-        if (lower == upper) return sorted.get(lower);
+        if (lower == upper) {
+            return sorted.get(lower);
+        }
         double fraction = index - lower;
         return sorted.get(lower) + fraction * (sorted.get(upper) - sorted.get(lower));
     }
 
     private static String formatStats(DoubleSummaryStatistics stats, String prefix) {
         return "count=%d, sum=%s%,.0f, min=%s%,.0f, max=%s%,.0f, avg=%s%,.0f"
-                .formatted(stats.getCount(),
-                        prefix, stats.getSum(),
-                        prefix, stats.getMin(),
-                        prefix, stats.getMax(),
-                        prefix, stats.getAverage());
+            .formatted(stats.getCount(),
+                prefix, stats.getSum(),
+                prefix, stats.getMin(),
+                prefix, stats.getMax(),
+                prefix, stats.getAverage());
     }
 
     private static <K> Map<K, String> formatMoney(Map<K, Double> map) {
         Map<K, String> formatted = new LinkedHashMap<>();
         map.entrySet().stream()
-                .sorted(Map.Entry.<K, Double>comparingByValue().reversed())
-                .forEach(e -> formatted.put(e.getKey(), "£%,.0f".formatted(e.getValue())));
+            .sorted(Map.Entry.<K, Double>comparingByValue().reversed())
+            .forEach(e -> formatted.put(e.getKey(), "£%,.0f".formatted(e.getValue())));
         return formatted;
     }
 
